# fastapi_tutorial

./: .env  index.html  main.py  practice.py  pyproject.toml
docker/: Dockerfile  docker-compose.yml
ex/: ex-jwt.py
src/: database.py  main.py  models.py  schema.py  services.py
