[tool.poetry]
name = "fastapipractice"
version = "0.1.0"
description = ""
authors = ["Jang JiWoo <77304817+cheeou@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
